Catching Javascript error if no image cropper is initialized and refactoring some finder methods to Arel syntax. (Fixes #150)

--- a/app/assets/stylesheets/alchemy/base.css.scss
+++ b/app/assets/stylesheets/alchemy/base.css.scss
@@ -221,7 +221,7 @@ div.pagination span.gap {
 #login_box {
 	height: 310px;
 	width: 394px;
-	margin-top: -210px;
+	margin-top: -230px;
 	margin-left: -197px;
 	position: absolute;
 	top: 50%;
